--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Úvodní stránka</title>
-    <link rel="stylesheet" href="../programy_a_data/uvod.css" />
+    <link rel="stylesheet" href="styles/uvod.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <main>
       <div class="flex-container">
         <div>
-          <h2><a href="../programy_a_data/A/index.html">Programové a datové soubory</a></h2>
+          <h2><a href="A/index.html">Programové a datové soubory</a></h2>
           <ol>
             <li>soubory a jejich vlastnosti</li>
             <li>adresáře (složky)</li>
@@ -27,7 +27,7 @@
           </ol>
         </div>
         <div>
-          <h2><a href="../programy_a_data/B/index.html">Operační systémy</a></h2>
+          <h2><a href="B/index.html">Operační systémy</a></h2>
           <ol>
             <li>Systémové programy</li>
             <li>Funkce operačních systémů</li>
@@ -37,7 +37,7 @@
           </ol>
         </div>
         <div>
-          <h2><a href="../programy_a_data/C/index.html">Ovladače, firmware a utility</a></h2>
+          <h2><a href="C/index.html">Ovladače, firmware a utility</a></h2>
           <ol>
             <li>Ovladače zařízení</li>
             <li>Firmware</li>
@@ -45,7 +45,7 @@
           </ol>
         </div>
         <div>
-          <h2><a href="../programy_a_data/D/index.html">Software a autorský zákon</a></h2>
+          <h2><a href="D/index.html">Software a autorský zákon</a></h2>
           <ol>
             <li>Programy a autorský zákon</li>
             <li>Kontrola legálnosti</li>
@@ -53,14 +53,14 @@
           </ol>
         </div>
         <div>
-          <h2><a href="../programy_a_data/E/index.html">Emulace a virtualizace</a></h2>
+          <h2><a href="E/index.html">Emulace a virtualizace</a></h2>
           <ol>
             <li>Emulátor</li>
             <li>Virtualizace</li>
           </ol>
         </div>
         <div>
-          <h2><a href="../programy_a_data/F/index.html">Cloudová řešení</a></h2>
+          <h2><a href="F/index.html">Cloudová řešení</a></h2>
           <ol>
             <li>Cloud Computing</li>
             <li>Tipy Cloudu</li>
